Bug 460417 - invalid handling of selection changes inside input element, r=aaronlev, marcoz, sr=neil